<resources>
    <string name="app_name">学德快</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_study">学习</string>
    <string name="title_quiz">测试</string>
    <string name="title_me">我的</string>
    <string name="sunday">日</string>
    <string name="saturday">六</string>
    <string name="friday">五</string>
    <string name="thursday">四</string>
    <string name="wednesday">三</string>
    <string name="tuesday">二</string>
    <string name="monday">一</string>
    <string name="course_step_first">数字介绍及发音（1）</string>
    <string name="course_step_first_summary">莫等闲，白了少年头，空悲切。</string>
    <string name="course_step_second">数字介绍及发音（2）</string>
    <string name="course_step_second_summary">三冬今足用，谁笑腹空虚。</string>
    <string name="course_step_third">序数词介绍</string>
    <string name="course_step_third_summary">少年易老学难成，一寸光阴不可轻。</string>
    <string name="course_step_fourth">数字不同的表达方式</string>
    <string name="course_step_fourth_summary">会当凌绝顶，一览众山小。</string>
    <string name="start_study">开始学习</string>
    <string name="got_it">学会了</string>
    <string name="prev">上一个</string>
    <string name="add_bookmark">加标签</string>
    <string name="quiz">数字检测</string>
    <string name="quiz_primary">初级</string>
    <string name="quiz_primary_summary">黑发不知勤学早，白发方悔读书迟</string>
    <string name="quiz_volume">数字检测-音频</string>
    <string name="quiz_volume_summary">人生如根蒂，飘如陌上尘</string>
    <string name="quiz_advance">高级</string>
    <string name="quiz_advance_summary">少年易学老难成，一寸光阴不可清</string>
    <string name="prev_question">上一题</string>
    <string name="next_question">下一题</string>
    <string name="input_result_hint">结果在这里</string>
    <string name="input_result_error">答案不对哦，正确答案是--%s</string>
    <string name="volume_result_error">答案不对哦，再仔细听一遍</string>
    <string name="empty_option_error">需要选择一个你认为正确的答案哦</string>
    <string name="quiz_number_input">数字填空</string>
    <string name="quiz_watch_input">看数写数</string>
    <string name="quiz_image_option">看图选数</string>
    <string name="quiz_volume_input">听数键入</string>
    <string name="quiz_volume_option">听数选择</string>
    <string name="quiz_random">随机</string>
    <string name="complete">完成</string>
    <string name="complete_msg">恭喜你，完成任务！</string>
    <string name="complete_tip">长风破浪会有时，直挂云帆济沧海</string>
    <string name="continue_task">继续闯关</string>
    <string name="tip_round">这是你第%s次学习，加油！</string>
    <string name="counter">(%d/%d)</string>
    <string name="start_days">你已学习%s天</string>
    <string name="pie_title">答题正确率</string>
    <string name="pie_right">正确率</string>
    <string name="pie_wrong">错误率</string>
    <string name="course_progress">课程进度</string>
    <string name="course_finished_rate">课程完成率</string>
    <string name="course_round">第%d轮</string>
    <string name="course_finished">已完成</string>
    <string name="course_left">未完成</string>
    <string name="category_pie">分类正确率</string>
    <string name="wrong_rate">题型错误率</string>
    <string name="chart">折线图</string>
    <string name="bookmark">书签</string>
    <string name="chart_for_every_3">进步统计图</string>
    <string name="wrong_count">共%d个问题，错了%d个</string>
</resources>
