<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_item_me_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp16"
        android:clickable="true"
        android:src="@drawable/icon_left"
        app:layout_constraintBottom_toBottomOf="@+id/tv_item_me_month"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tv_item_me_month"
        app:layout_constraintTop_toTopOf="@+id/tv_item_me_month" />

    <TextView
        android:id="@+id/tv_item_me_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp16"
        android:layout_marginRight="@dimen/dp16"
        android:paddingTop="@dimen/dp8"
        android:paddingBottom="@dimen/dp8"
        android:textSize="@dimen/sp18"
        app:layout_constraintBottom_toBottomOf="@+id/iv_item_me_right"
        app:layout_constraintLeft_toRightOf="@id/iv_item_me_left"
        app:layout_constraintRight_toLeftOf="@+id/iv_item_me_right"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_item_me_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp16"
        android:clickable="true"
        android:src="@drawable/icon_right"
        app:layout_constraintBottom_toBottomOf="@+id/tv_item_me_month"
        app:layout_constraintLeft_toRightOf="@id/tv_item_me_month"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_item_me_month" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/fl_item_me_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_me_month">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/monday"
            app:layout_flexBasisPercent="12%"
            app:layout_flexGrow="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tuesday"
            app:layout_flexBasisPercent="12%"
            app:layout_flexGrow="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/wednesday"
            app:layout_flexBasisPercent="12%"
            app:layout_flexGrow="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/thursday"
            app:layout_flexBasisPercent="12%"
            app:layout_flexGrow="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/friday"
            app:layout_flexBasisPercent="12%"
            app:layout_flexGrow="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/saturday"
            app:layout_flexBasisPercent="12%"
            app:layout_flexGrow="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sunday"
            app:layout_flexBasisPercent="12%"
            app:layout_flexGrow="1" />
    </com.google.android.flexbox.FlexboxLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:background="@color/divider"
        android:layout_marginTop="@dimen/dp8"
        android:layout_marginBottom="@dimen/dp8"
        app:layout_constraintTop_toBottomOf="@id/fl_item_me_title"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>