<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_complete_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.31415" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/iv_complete_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_check_black_24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gl_complete_line"
            app:layout_constraintVertical_bias="0.314" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cv_complete_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/dp24"
            android:layout_marginTop="@dimen/dp28"
            android:layout_marginRight="@dimen/dp24"
            app:layout_constraintDimensionRatio="1:0.618"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gl_complete_line">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_complete_msg"
                    style="@style/Title.Meduim"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/complete_msg"
                    android:textColor="@color/colorAccent"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintBottom_toTopOf="@id/tv_complete_tip"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_complete_tip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/complete_tip"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_complete_msg" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_complete_finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp24"
            android:text="@string/continue_task"
            app:layout_constraintLeft_toLeftOf="@id/cv_complete_container"
            app:layout_constraintRight_toRightOf="@id/cv_complete_container"
            app:layout_constraintTop_toBottomOf="@id/cv_complete_container" />
    </androidx.constraintlayout.widget.ConstraintLayout>